# texworks-testing

./: .bettercodehub.yml  .travis.disabled  .travis.yml  CMakeLists.txt  bintray.json  getGitRevInfo.sh  index.md  mac-sleep.pro  mac-sysinfo.cpp  mac-timing.cpp  prepare_deploy.sh  sysinfo.mm
.github/actions/build-hunspell/: action.yml  index.js  package.json
.github/actions/build-poppler/: action.yml  index.js  package-lock.json  package.json
.github/actions/deploy-bintray/: action.yml  upload2bintray.py
.github/actions/deploy-launchpad/: action.yml  dput.cf
.github/actions/install-cmake/: action.yml  index.js  package-lock.json  package.json
.github/actions/msvc-dependencies/: CMakeLists.txt
.github/actions/package-launchpad/: action.yml  get-ubuntu-series.py  package.sh
.github/actions/package-launchpad/launchpad/: .gitignore  focal.patch  key.asc.gpg  trusty.patch  xenial.patch
.github/actions/package-launchpad/launchpad/debian/: control
.github/actions/package-macos/: action.yml
.github/actions/package-windows/: action.yml
.github/actions/setup-macos/: CMakeLists.txt  action.yml  libtiff-1.patch  lua.patch  poppler.patch
.github/actions/setup-windows/: action.yml
.github/actions/setup-windows/mxe/: poppler.mk
.github/workflows/: Dockerfile.appimage-debian  Dockerfile.arch  Dockerfile.arch-qt6  Dockerfile.fedora  Dockerfile.opensuse  build-poppler.py  build.address-sanitizer  cd.yml  ci-bigsur.yml  ci-test.yml  ci.yml  ci.yml.disabled  mac-env.yml  mac-sleep.yml  mac-sysinfo.yml  mac-timing.yml  macports.yml  main.yml  mxe.docker  mxe.yml  mxe.yml.disabled  no-warnings.patch  poppler.patch  screenshot.yml  test.yml  workflow.yml
CMake/Modules/: DeployQt5.cmake  FindHunspell.cmake
CMake/packaging/: CMakeLists.txt
CMake/packaging/mac/: MacPackagingTasks.cmake.in  MacPackagingTasks.in.cmake  poppler.rb  set_dmg_layout.scpt.in
ci/travis-ci/: build.sh  codecov.yml  configure.sh  defs.sh  get-dependencies.sh  package.sh  run-tests.sh
ci/travis-ci/launchpad/: key.asc.enc
ci/travis-ci/win32/: qt-install.qs
lib-patches/: poppler-0001-Fix-bogus-memory-allocation-in-SplashFTFont-makeGlyp.patch  poppler-0002-Native-Mac-font-handling.patch  poppler-0003-Add-support-for-persistent-GlobalParams.patch  poppler-mac-debug.patch
mac-env/: CMakeLists.txt  mac-env.cpp
modules/: CMakeLists.txt
modules/QtPDF/: CMakeLists.txt
modules/QtPDF/CMake/Modules/: FindPoppler.cmake  TranslationMacros.cmake
modules/QtPDF/src/: PDFBackend.cpp  PDFPageTile.h  PDFTransitions.cpp
modules/QtPDF/src/backends/: PopplerQtBackend.cpp
modules/QtPDF/unit-tests/: Makefile  TestQtPDF.cpp
plugins-src/TWLuaPlugin/: CMakeLists.txt
scripts/: checkDependencyUpdates.py
src/: CMakeLists.txt  Makefile  ScriptManagerWidget.cpp  TWApp.cpp  TWScriptableWindow.cpp  TWVersion.h
src/document/: SpellChecker.cpp
src/en/: Makefile
src/en/html/: Makefile
src/fr/: Makefile
src/fr/html/: Makefile
src/ui/: ScreenCalibrationWidget.cpp
src/utils/: FileVersionDatabase.cpp
test/: CMakeLists.txt  test.cpp
travis-ci/: build-poppler-mxe.mk  configure.sh  defs.sh  get-dependencies.sh  getManual.py  install.sh  package.sh  poppler.mk  prepare-bintray.sh  run-tests.sh  texlive.profile
travis-ci/bintray/: package.sh
travis-ci/launchpad/: dput.cf  id_rsa_texworks  id_rsa_texworks.enc  keys.tar.enc  package.sh
travis-ci/launchpad/debian/: control  copyright  rules
travis-ci/mxe/: build-mxe.mk  build-poppler-mxe.mk  poppler-2-custom_fonts_dir.patch  poppler.mk  qt5-QUiLoader-fix.patch
travis-ci/win32/: qt-install.qs
unit-tests/: CMakeLists.txt  Document_test.cpp  UI_test.cpp  Utils_test.cpp
